projeto final aula 5

--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -1,7 +1,6 @@
 {% extends 'galeria/base.html' %}
 {% load static %}
 {% block content %}
-
             <section class="conteudo">
                 <section class="imagem">
                     <div class="imagem__conteudo">
@@ -17,4 +16,5 @@
                 </section>
             </section>
         </main>
+    </div>
 {% endblock %}
