--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -1,7 +1,6 @@
-{% extends 'galeria\base.html' %}
+{% extends 'galeria/base.html' %}
 {% load static %}
 {% block content %}
-
             <section class="conteudo">
                 <section class="banner">
                     <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
@@ -21,7 +20,7 @@
                         <h2 class="cards__titulo">Navegue pela galeria</h2>
                         <ul class="cards__lista">
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -36,7 +35,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -51,7 +50,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -66,7 +65,22 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="{% url 'imagem' %}">
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
+                                </a>
+                                <span class="card__tag">Estrelas</span>
+                                <div class="card__info">
+                                    <p class="card__titulo">Nome da foto</p>
+                                    <div class="card__texto">
+                                        <p class="card__descricao">Fonte/fotógrafo/satélite</p>
+                                        <span>
+                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png" alt="ícone de coração' %}">
+                                        </span>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="card">
+                                <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -81,22 +95,7 @@
                                 </div>
                             </li>
                             <li class="card">
-                                <a href="imagem.html">
-                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Estrelas</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">Nome da foto</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Fonte/fotógrafo/satélite</p>
-                                        <span>
-                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
-                                <a href="imagem.html">
+                                <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
@@ -115,4 +114,5 @@
                 </section>
             </section>
         </main>
+    </div>
 {% endblock %}
